--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Addiction time counter",
+    "name": "Sites time counter",
     "description": "...",
     "version": "1.0",
     "permissions": ["<all_urls>", "storage", "tabs"],
